# Bea

./: .coverage  .dockerignore  .env.example  .env.example.local  .env.example.production  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .importlinter  .pre-commit-config.yaml  .secrets.baseline  .tokens.json  ACTIVATION_SI_V3_RAPPORT.md  API_CLEANUP.md  ARCHITECTURAL_AUDIT_SUMMARY.md  ARCHITECTURE.md  AUTONOMOUS_SESSION_MANIFEST.md  Audit_Jarvismax_2026-05-18.docx  BUSINESS_ENGINE_QUICKSTART.md  BUSINESS_INTEGRATION_REPORT.md  CANONICAL_COMPONENTS.md  CHANGELOG.md  COGNITION_INTEGRATION_REPORT.md  COGNITION_VALIDATION_REPORT.md  CONSOLIDATION_VISUAL.txt  CONSTITUTION.md  CONTRIBUTING.md  Caddyfile  DEPLOYMENT.md  DEPLOYMENT_WORKFLOW_SUMMARY.md  Dockerfile  Dockerfile.nonroot  E2E_TESTS_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOGGING_MONITORING_SUMMARY.md  MEMORY_ARCHITECTURE_CURRENT.md  (+72 more)
.github/: CODEOWNERS  dependabot.yml
adapters/: __init__.py  openhands_client.py
agent_cyber/: __init__.py  actions.py  evidence.py  findings.py  integration.py  mission_graph.py  policy.py  reports.py  scope.py  skills.py
agent_data/: __init__.py  agent.py  reports.py  sql_policy.py
agent_github/: __init__.py  issues.py  labels.py  mission_loop.py
agent_marketplace/: _DEAD_CODE_NOTICE.md  __init__.py  marketplace.py
agent_memory/: __init__.py  codebase.py  learning.py  models.py  store.py
agent_research/: __init__.py  agent.py  reports.py  sources.py
agent_runtime/: __init__.py  actions.py  executor.py  policy.py  registry.py  results.py  sandbox.py
agent_self_improvement/: __init__.py  improvement_issues.py  reflection.py  skill_library.py
agent_workflows/: __init__.py  engine.py  review_gate.py  roles.py  verdicts.py
agents/: __init__.py  agent_factory.py  agent_output.py  business_agents_suite.py  business_model_agent.py  contracts.py  crew.py  crew_runtime.py  debug_agent.py  evaluator.py  finance_agent.py  kernel_bridge.py  market_research_agent.py  monitoring_agent.py  multimodal_router.py  openhands_agent.py  parallel_executor.py  registry.py  selector.py  self_critic.py  synthesizer_agent.py  web_scout.py  workflow_agent.py
api/: ROUTE_STATUS.md  __init__.py  _deps.py  access_enforcement.py  access_tokens.py  auth.py  auth_principal.py  base_schema.py  deprecation_middleware.py  event_emitter.py  jwt_v2.py  lifespan.py  main.py  middleware.py  mission_agents.py  mission_approval.py  mission_legacy.py  mission_outputs.py  mission_response.py  mission_store.py  mission_system_mode.py  models.py  rate_limit_middleware.py  rate_limiter.py  router_mount.py  router_registry.py  schemas.py  schemas_missions.py  security_headers.py  startup_checks.py  stream_router.py  token_utils.py  ws.py  ws_hub.py
bea_mcp/: __init__.py  github_mcp_adapter.py  qdrant_mcp_adapter.py
beamax_app/: BUILD_INSTRUCTIONS.md  SETUP_ET_BUILD.bat  build_apk.sh  pubspec.yaml
business/: METRICS_EXAMPLE.md  README.md  __init__.py  business_engine.py  business_knowledge.py  business_orchestrator.py  fallbacks.py  layer.py  revenue_launch.py
business_agents/: __init__.py  factory.py  improvement_bridge.py  template_registry.py  template_schema.py  test_harness.py
config/: agent_profiles.yaml  policy.yaml  settings.py
connectors/: api_connectors.py  base.py  bootstrap.py  dynamic_connector.py  email_connector.py  filesystem_connector.py  github_connector.py  http_connector.py
core/: __init__.py  _logging_helpers.py  action_executor.py  db.py  (+135 more)
sdk/: README.md  pyproject.toml  requirements.txt
sdk/bea_sdk/: __init__.py  client.py  exceptions.py  memory.py  mission.py
subprojects/hexstrike_v2/: README.md  pyproject.toml
(+1708 files in other folders)
